[Add] self-signed SSL certificate, enable https

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,14 @@
-server.port=3000
+#server.port=3000
+#spring.thymeleaf.cache=false
+#spring.thymeleaf.enabled=true
+#spring.thymeleaf.prefix=classpath:/templates/
+
+server.port=3443
+server.ssl.enabled=true
+server.ssl.key-store=src/main/resources/certificate.p12
+server.ssl.key-store-password=123456
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=boot
 spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
-spring.security.user.name=kamil
-spring.security.user.password=123
