[Add] enable accesslog

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ server.ssl.key-alias=boot
 spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
+server.tomcat.accesslog.enabled=true
+server.tomcat.basedir=tomcat
