[Add] enable self signed certificate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 
 server.port=3443
 server.ssl.enabled=true
-server.ssl.key-store=src/main/resources/certificate.p12
+server.ssl.key-store=classpath:keystore/certificate.p12
 server.ssl.key-store-password=123456
 server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=boot
